sna: Fix overflow calculation for number of boxes that fit

We detect when the number of boxes we wished to emit into the batch
would overflow, but then miscalculated the number that would actually fit.

References: https://bugs.freedesktop.org/show_bug.cgi?id=112296
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>